fix prices on mobile

--- a/src/global.css
+++ b/src/global.css
@@ -102,6 +102,19 @@
 	}
 }
 
+@layer utilities {
+	@variants responsive {
+		.no-scrollbar::-webkit-scrollbar {
+			display: none;
+		}
+
+		.no-scrollbar {
+			-ms-overflow-style: none;
+			scrollbar-width: none;
+		}
+	}
+}
+
 @keyframes reveal-dark {
 	from {
 		clip-path: polygon(-30% 0, -30% 0, -15% 100%, -10% 115%);
